--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "xboyliu",
   "license": "ISC",
   "scripts": {
-    "test": "mocha"
+    "test": "node ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --colors ./test/**/*.js",
+    "coverage": "cat ./coverage/lcov.info | coveralls"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   "homepage": "https://github.com/xboy2012/XDefer",
   "devDependencies": {
     "coveralls": "^2.11.15",
+    "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
     "mocha-lcov-reporter": "^1.2.0",
     "should": "^11.1.2"
