--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "xdefer",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A Defer implementation",
-  "main": "index.js",
+  "main": "dist/es5/index.js",
+  "module": "dist/es6/index.js",
+  "jsnext:main": "dist/es6/index.js",
   "author": "xboyliu",
   "license": "ISC",
   "scripts": {
+    "build": "gulp build",
     "test": "node ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --colors ./test/**/*.js",
     "coverage": "cat ./coverage/lcov.info | coveralls"
   },
@@ -21,10 +24,30 @@
   },
   "homepage": "https://github.com/xboy2012/XDefer",
   "devDependencies": {
-    "coveralls": "^2.11.15",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-helper-modules": "^6.0.0",
+    "babel-plugin-transform-helper-modules": "^6.1.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-remove-strict-mode": "0.0.2",
+    "babel-preset-es2015": "^6.24.1",
+    "coveralls": "^2.13.1",
+    "gulp": "github:gulpjs/gulp#4.0",
     "istanbul": "^0.4.5",
-    "mocha": "^3.2.0",
-    "mocha-lcov-reporter": "^1.2.0",
+    "mocha": "^3.4.2",
+    "mocha-lcov-reporter": "^1.3.0",
+    "regenerator-runtime": "^0.9.6",
+    "rollup": "^0.45.2",
     "should": "^11.1.2"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ],
+    "plugins": [
+      "transform-remove-strict-mode",
+      "transform-helper-modules",
+      "transform-object-rest-spread"
+    ]
   }
 }
