--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "babel-preset-es2015": "^6.24.1",
+    "bluebird": "^3.5.0",
     "coveralls": "^2.13.1",
     "gulp": "github:gulpjs/gulp#4.0",
     "istanbul": "^0.4.5",
